<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/header">

        <TextView
            android:id="@+id/textDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:text="@string/questao_01"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:background="@color/transparent100"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_help_black_48px"
                android:tint="@color/white" />

            <ImageButton
                android:id="@+id/buttonVoice"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/transparent100"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_volume_up_black_24px"
                android:tint="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <!--<android.support.v4.widget.NestedScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="0.4"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:context=".MainActivity"-->
    <!--tools:showIn="@layout/fragment_1">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:scaleType="center"
            android:src="@drawable/background_questoes" />

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:justificationMode="inter_word"-->
        <!--android:paddingBottom="56dp"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:paddingRight="16dp"-->
        <!--android:text="@string/q_01_exp"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="16dp" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/frag_02_bt_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/geo_circle"
                android:backgroundTint="@color/teal_800"
                android:text="@string/q_01_a"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/frag_02_bt_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/geo_circle"
                android:backgroundTint="@color/teal_600"
                android:text="@string/q_01_b"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
    <!--</android.support.v4.widget.NestedScrollView>-->

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="0.15">-->


    <!--</RelativeLayout>-->
</LinearLayout>